ingress-example/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    ngnix.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: hello-world.info #172.17.0.2 minikube ip
    http: 
      paths:
      - path: /
        backend:
          serviceName: client-cluster-ip-service
          servicePort: 3000
      - path: /api/
        backend:
          serviceName: client-cluster-ip-service
          servicePort: 5000
